logs/turtlesim/build.make.001.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In constructor ‘turtlesim::Turtle::Turtle(const ros::NodeHandle&, const QImage&, const QPointF&, float)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:60:53: error: ‘poseCallback’ is not a member of ‘turtlesim::Turtle’
   pose_sub=nh_.subscribe("\turtlepose", 1, &Turtle::poseCallback, this);
                                                     ^~~~~~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: At global scope:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:65:48: error: ‘Point’ in namespace ‘geometry_msgs’ does not name a type
 void Turtle::poseCallback(const geometry_msgs::Point::ConstPtr& point)
                                                ^~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:65:63: error: expected unqualified-id before ‘&’ token
 void Turtle::poseCallback(const geometry_msgs::Point::ConstPtr& point)
                                                               ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:65:63: error: expected ‘)’ before ‘&’ token
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:65:65: error: expected initializer before ‘point’
 void Turtle::poseCallback(const geometry_msgs::Point::ConstPtr& point)
                                                                 ^~~~~
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
